hphp/hack/test/typecheck/xhp_attr_22.php.exp
File "xhp_attr_22.php", line 14, characters 25-40:
Invalid xhp value for attribute :mysubclass in :foo (Typing[4343])
File "xhp_attr_22.php", line 9, characters 5-12:
Expected Subclass
File "xhp_attr_22.php", line 14, characters 29-38:
But got Superclass
